# RAG_chatbot_med

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  setup.py  store_index.py
.github/workflows/: cicd.yaml
src/: helper.py
