[project]
name = "rag-chatbot-med"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.3",
    "ipykernel>=7.2.0",
    "langchain==1.2.14",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.11",
    "langchain-text-splitters==1.1.2",
    "pypdf==6.10.2",
    "python-dotenv==1.2.2",
    "sentence-transformers==5.1.1",
]
